[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Allows libsodium to be initialised with a seeded PRNG."
documentation = "http://docs.maidsafe.net/libsodium_seeded_prng/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "libsodium_seeded_prng"
readme = "README.md"
repository = "https://github.com/maidsafe/libsodium_seeded_prng"
version = "0.1.1"

[dependencies]
clippy = {version = "~0.0.76", optional = true}
lazy_static = "~0.2.1"
libc = "~0.2.12"
quick-error = "~1.0.0"
rand = "~0.3.14"
unwrap = "~1.1.0"

[dev-dependencies]
sodiumoxide = "~0.0.10"
